force-app/main/default/objects/InspectionAndPossession__c/InspectionAndPossession__c.object-meta.xml
<CustomObject>
    <label>InspectionAndPossession</label>
    <nameField>
        <displayFormat>ISP-{0000000}</displayFormat>
        <label>Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InspectionAndPossession</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>