force-app/main/default/objects/InspectionAndPossession__c/fields/RW_Actual_possession_dt__c.field-meta.xml
<CustomField>
    <fullName>RW_Actual_possession_dt__c</fullName>
    <label>Actual Possession Date</label>
    <type>DateTime</type>
</CustomField>