force-app/main/default/objects/InspectionAndPossession__c/fields/RW_CRM_Int_dt__c.field-meta.xml
<CustomField>
    <fullName>RW_CRM_Int_dt__c</fullName>
    <label>CRM Inspection Initiation Date</label>
    <type>DateTime</type>
</CustomField>