force-app/main/default/objects/InspectionAndPossession__c/fields/RW_Expected_Possession_dt__c.field-meta.xml
<CustomField>
    <fullName>RW_Expected_Possession_dt__c</fullName>
    <label>Expected Possession Date</label>
    <type>DateTime</type>
</CustomField>