force-app/main/default/objects/InspectionAndPossession__c/fields/RW_Fac_cl_dt__c.field-meta.xml
<CustomField>
    <fullName>RW_Fac_cl_dt__c</fullName>
    <label>Facility Inspection Completion Date</label>
    <type>DateTime</type>
</CustomField>