force-app/main/default/objects/InspectionAndPossession__c/fields/RW_Fac_Int_dt__c.field-meta.xml
<CustomField>
    <fullName>RW_Fac_Int_dt__c</fullName>
    <label>Facility Inspection Initiation Date</label>
    <type>DateTime</type>
</CustomField>