force-app/main/default/objects/InspectionAndPossession__c/fields/RW_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection Scheduled</fullName>
                <default>true</default>
                <label>Inspection Scheduled</label>
            </value>
            <value>
                <fullName>Home Score Initiated</fullName>
            </value>
            <value>
                <fullName>Home Score Completed</fullName>
            </value>
            <value>
                <fullName>Readiness Initiated</fullName>
            </value>
            <value>
                <fullName>Readiness Completed</fullName>
            </value>
            <value>
                <fullName>Snagging Initiated</fullName>
            </value>
            <value>
                <fullName>Snagging Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>