force-app/main/default/objects/InspectionAndPossession__c/fields/RW_InspectionPossession_File_ID__c.field-meta.xml
<CustomField>
    <fullName>RW_InspectionPossession_File_ID__c</fullName>
    <label>InspectionPossession File ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>