force-app/main/default/objects/InspectionAndPossession__c/fields/RW_No_due_certificate__c.field-meta.xml
<CustomField>
    <fullName>RW_No_due_certificate__c</fullName>
    <label>No Dues Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Received</fullName>
                <default>true</default>
                <label>Not Yet Received</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>