force-app/main/default/objects/InspectionAndPossession__c/fields/RW_PT_Int_dt__c.field-meta.xml
<CustomField>
    <fullName>RW_PT_Int_dt__c</fullName>
    <label>ProjectTeam&apos;s Inspection Initiation Date</label>
    <type>DateTime</type>
</CustomField>