force-app/main/default/objects/InspectionAndPossession__c/fields/RW_PT_ReInt_dt__c.field-meta.xml
<CustomField>
    <fullName>RW_PT_ReInt_dt__c</fullName>
    <label>ProjectTeam Reinitiation Date</label>
    <type>DateTime</type>
</CustomField>