force-app/main/default/objects/InspectionAndPossession__c/fields/RW_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_SAP_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Code</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>